--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,10 @@ nz-layout {
     }
   }
 
+  .page-title h1 {
+    color:white;
+  }
+
   .search-box-container {
     height: 100%;
     display: flex;
